Fixing sidebar input fields width on IE

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -177,6 +177,7 @@ h2 {
   color: #fff;
 }
 .add-container {
+  width: 100%;
   color: #fff;
   label {
     display: block;
